# Lol

./: lol.cabal
apps/examples/SymmSHE/: SimpleSHE.hs
challenges/: Challenges.proto  ParamGen.hs
challenges/Crypto/Proto/RLWE/: Challenges.hs
challenges/Crypto/Proto/RLWE/Challenges/: DiscParams.hs  Secret.hs
challenges/exec/: Generate.hs  Params.hs
compiler/: DRBG.hs  Main.hs  Types.hs
compiler/AST/: AST.hs  CT.hs  CTCompiler.hs  CTDummy.hs
examples/: Main.hs  Types.hs
lol/: RLWE.proto  benchtest.cabal  lol.cabal  makefile
lol/Crypto/: Lol.hs
lol/Crypto/Lol/: FactoredDefs.hs  PosBinDefs.hs  Prelude.hs  Reflects.hs
lol/Crypto/Lol/Cyclotomic/: Cyc.hs  Tensor.hs  UCyc.hs
lol/Crypto/Lol/Cyclotomic/Tensor/: CTensor.hs  RepaTensor.hs
lol/Crypto/Lol/Cyclotomic/Tensor/CTensor/: Backend.hs  l.cpp  tensor.h  types.h
lol/Crypto/Lol/Cyclotomic/Tensor/RepaTensor/: GL.hs
lol/Crypto/Lol/Types/: FiniteField.hs  IrreducibleChar2.hs  Numeric.hs  Proto.hs  ZqBasic.hs  ZqProd.hs
lol/Crypto/Proto/: RLWE.hs
lol/Crypto/Proto/RLWE/: Rq.hs  ZqProd.hs
lol/benchmarks/: CTBenches.hs  CycBenches.hs  Main.hs  TensorBenches.hs  UCycBenches.hs
lol/src/: Bar.hs  BarBench.hs  BarBenches.hs  CTensor.hs  Factored.hs  FactoredDefs.hs  Foo.hs  FooBar.hs  FooBench.hs  FooBenches.hs  Main.hs  PosBinDefs.hs  T.hs  TBench.hs  TensorBenches.hs  UCycBenches.hs
lol/utils/: Foo.hs  THApplyProxy.hs
src/Crypto/Lol/Compiler/: AST.hs  CT.hs  CTCompiler.hs  CTDummy.hs
src/Crypto/Lol/Cyclotomic/: UCyc.hs
