name:                benchtest
build-type:          Simple
cabal-version:       >= 1.10
version:             0.4.0.0

executable bench-test
  hs-source-dirs:     src
  default-language:   Haskell2010
  main-is:            Main.hs

  ghc-options: -O3
  ghc-options: -ddump-to-file -ddump-simpl
  ghc-options: -dsuppress-coercions -dsuppress-type-applications -dsuppress-uniques -dsuppress-module-prefixes

  build-depends:
    base,
    criterion,
    deepseq >= 1.4.1.1 && <1.5,
    singletons >= 1.1.2.1 && < 2.2,
    tagged
